# news-return-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  temptesting.py
src/news_return_pipeline/: __init__.py  config.py  paths.py
src/news_return_pipeline/data/: import_kaggle.py  load_raw.py  make_dataset.py  preprocess.py
src/news_return_pipeline/datasets/: __init__.py  dataset.py  import_kaggle.py  kaggle.py  kaggle_news.py  kaggle_sp500.py  kaggle_stocks.py
src/news_return_pipeline/evaluation/: bootstrap.py  metrics.py
src/news_return_pipeline/models/: baselines.py
src/news_return_pipeline/pipeline/: aggregate_news.py  align_news_to_trading_calendar.py  finbert_sentiment.py  make_targets.py  merge_datasets.py  preprocess.py  preprocess_news.py  preprocess_sp500.py  preprocess_stocks.py
src/news_return_pipeline/scripts/: __init__.py  ablation_testing.py  build_dataset.py  import_prototype_kaggle.py  prelim_data.txt  prelim_data_vis.py  run_preprocess.py  train.py  train_baseline.py
tests/: test_finbert.py  test_import.py  test_import_kaggle.py  test_preprocessing.py
tests/fixtures/: prototype.csv
