[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "news-return-pipeline"
version = "0.1.0"
description = "Reproducible ML pipeline for testing news headline signal on stock returns."
authors = [{ name = "Fabian Tan" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "pandas>=2.0",
  "kagglehub>=0.3",
  "python-dotenv>=1.0"
  "pyarrow>=15.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]